src/Pages/Admin/AddCourse.css
.add-course-container {
  display: flex;
  height: 100vh; /* Full viewport height */
  overflow: hidden;
}

.add-course-main {
  flex-grow: 1;
  padding: 20px;
  overflow-y: auto; /* Enable vertical scrolling */
  display: flex;
  flex-direction: column;
}

.add-course-title {
  text-align: center;
  margin-bottom: 20px;
}

.add-course-form {
  background-color: #fff;
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  width: 80%;
}

.add-course-form-group {
  margin-bottom: 20px;
}

.add-course-form-group label {
  font-weight: bold;
  margin-bottom: 8px;
  display: block;
}

.add-course-form-group input,
.add-course-form-group textarea {
  width: 100%;
  padding: 10px;
  font-size: 16px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

textarea {
  resize: vertical;
}

.add-course-domains-section {
  margin-top: 20px;
}

.add-course-domain-group {
  margin-bottom: 30px;
  border: 1px solid #e0e0e0;
  padding: 15px;
  border-radius: 8px;
}

.add-course-topics-section {
  margin-top: 10px;
}

.add-course-topic-input {
  margin-bottom: 10px;
}

.add-course-selected-image-preview {
  max-width: 200px;   /*setting max-width/max-height allows the image to mantain its configurations*/
  max-height: 200px;
  padding: 10px;
}

.add-course-add-topic-button,
.add-course-add-domain-button {
  background-color: #1771c5;
  color: white;
  padding: 10px 15px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  margin-top: 10px;
}

.add-course-add-topic-button:hover,
.add-course-add-domain-button:hover {
  background-color: #145da0;
}

.add-course-submit-button {
  background-color: #1771c5;
  color: white;
  padding: 15px;
  font-size: 18px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  width: 100%;
  margin-top: 20px;
}

.add-course-submit-button:hover {
  background-color: #145da0;
}

@media (max-width: 768px) {
  .add-course-form {
    padding: 10px;
  }

  .add-course-submit-button {
    font-size: 16px;
  }
}

